feat: scala spark 코드 추가