@@ -1,12 +1,32 @@
-val scala3Version = "3.4.1"
+scalaVersion := "3.4.1"
 
-lazy val root = project
-  .in(file("."))
-  .settings(
-    name := "hello-scala",
-    version := "0.1.0-SNAPSHOT",
+val sparkVersion = "3.5.1"
 
-    scalaVersion := scala3Version,
+val unnamedJavaOptions = List(
+  "-XX:+IgnoreUnrecognizedVMOptions",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+  "--add-opens=java.base/java.io=ALL-UNNAMED",
+  "--add-opens=java.base/java.net=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+  "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+  "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+  "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
+)
 
-    libraryDependencies += "org.scalameta" %% "munit" % "0.7.29" % Test
-  )
+libraryDependencies ++= Seq(
+  ("org.apache.spark" %% "spark-sql" % sparkVersion).cross(CrossVersion.for3Use2_13) % "provided",
+  ("org.apache.spark" %% "spark-core" % sparkVersion).cross(CrossVersion.for3Use2_13) % "provided"
+)
+
+javaOptions ++= Seq(
+  "--add-exports java.base/sun.nio.ch=ALL-UNNAMED"
+)
+
+Compile / run := Defaults.runTask(Compile / fullClasspath, Compile / run / mainClass, Compile / run / runner).evaluated
